Thu Mar 25 13:55:02 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DomainParticipant.h:
        * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
          Created administration for topic reuse. This should solve
          the shutdown errors of the hello example.

Thu Mar 25 12:32:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * EM-Redeployment:
        * EM-Redeployment/run_test.pl:
        * EM-Redeployment/README:
        Added test for faultless redeployments.

        * Components/SimpleFailure.mpc:
        * Components/SimpleFailure_exec.cpp:
        * Components/SimpleFailure_exec.h:
        * Components/SimpleFailure.idl:
        * EM-Launch-Failures:
        * EM-Launch-Failures/5NodeFailureAtStartup.cdp:
        * EM-Launch-Failures/1NodeNoFailure.cdp:
        * EM-Launch-Failures/2NodeNoFailure.cdp:
        * EM-Launch-Failures/5NodeNoFailure.cdp:
        * EM-Launch-Failures/1NodeFailureAtActivate.cdp:
        * EM-Launch-Failures/2NodeFailureAtActivate.cdp:
        * EM-Launch-Failures/1NodeFailureAtStartup.cdp:
        * EM-Launch-Failures/2NodeFailureAtStartup.cdp:
        * EM-Launch-Failures/run_test.pl:
        * EM-Launch-Failures/5NodeFailureAtActivate.cdp:
        * EM-Launch-Failures/README:
        Added test for redeployments after launch failures.

Thu Mar 25 12:14:57 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/performance-tests/Throughput/descriptors/Plan_pub.cdp:
        * connectors/dds4ccm/performance-tests/Throughput/descriptors/Plan_sub.cdp:
          Resolve start errors throughput test.

Thu Mar 25 12:14:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * Deployment/DAnCE_Core.mpc:
        * DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DomainApplication/DomainApplication.mpc:
        * DomainApplication/Domain_Application_Impl.cpp:
        Fixes for Visual Studio warnings and errors.
