@@ -1,3 +1,10 @@
+Thu Mar 25 15:27:13 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
+
+        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/Latency_Receiver.cpp
+        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp
+        * connectors/dds4ccm/performance-tests/DDSLatency/descriptors/run_test_dds.pl
+        Add extra inactive reader and writer, optional with cmd line argument -b.
+
 Thu Mar 25 13:55:02 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/dds/DomainParticipant.h:
